# Proyecto-2022

./: .gitignore  README.md
admin/: app.py  pyproject.toml
admin/public/: config.css  disciplinas.css  home.css  layout.css  login.css  users.css
admin/public/js/: functions.js
admin/src/core/: database.py  seeds.py
admin/src/core/auth/: __init__.py  user.py
admin/src/core/board/: __init__.py  config.py  disciplines.py  fee.py  issue.py  member.py  permiso.py  permission.py  receipt.py  receipt_disciplines.py  rol.py
admin/src/core/models/: __init__.py  disciplines.py  fee.py  member.py
admin/src/web/: __init__.py  config.py
admin/src/web/controllers/: asociados.py  config.py  disciplinas.py  disciplines.py  home.py  issues.py  login.py  members.py  payment.py  users.py
admin/src/web/controllers/api/: auth.py  club.py  me.py
admin/src/web/helpers/: auth.py  authenticate.py  forms.py  handlers.py  permissions.py
admin/src/web/templates/: error.html  home.html  layout.html  message.html  navbar.html
admin/src/web/templates/asociados/: index.html
admin/src/web/templates/config/: index.html
admin/src/web/templates/disciplinas/: index.html
admin/src/web/templates/disciplines/: index.html
admin/src/web/templates/issues/: index.html
admin/src/web/templates/login/: index.html
admin/src/web/templates/members/: index.html
admin/src/web/templates/payment/: index.html
admin/src/web/templates/pdf/: index.html  receipt.html
admin/src/web/templates/users/: index.html  listado.html
portal/: README.md  index.html  package-lock.json  package.json
(+23 files in other folders)
